# Proptimise_Coding_agent

./: .gitignore  README.md
Code_expert/: README.md  Start.md  litellm_config.yaml
Code_expert/prompts/: planner_prompt.txt  system_prompt.txt
Code_expert/scripts/: clean.sh  diagnose_llm_pipeline.py  run_agent.py  test_claude_agent_sdk.py  test_litellm_proxy.py  test_llm_2plus2.py
Code_expert/src/zipfix_agent/: agent.py  analyzer.py  config.py  readme_writer.py  repair_loop.py  schemas.py  skill_builder.py  tools.py  unzipper.py
outputs/calculator_project/: README_REPORT.md  result.json
outputs/calculator_project/scratch_project/intentional_error_calculator_project/: README.md  pyproject.toml
outputs/calculator_project/scratch_project/intentional_error_calculator_project/calculator/: __init__.py  core.py
outputs/calculator_project/scratch_project/intentional_error_calculator_project/tests/: test_calculator.py
zipfix-agent/: .gitignore  README.md  litellm_config.yaml  pyproject.toml
zipfix-agent/dataset/cases/: .gitkeep
zipfix-agent/scripts/: run_agent.py  start_litellm.sh  test_claude_agent_sdk.py  test_litellm_proxy.py  test_llm_2plus2.py
zipfix-agent/src/zipfix_agent/: __init__.py  agent.py  analyzer.py  checks.py  readme_writer.py  repair_loop.py  scoring.py  skill_builder.py
