[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zipfix-agent"
version = "0.1.0"
description = "ZipFix Agent – AI-powered test-driven code repair using Claude Agent SDK + LiteLLM + OpenAI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Proptimise Assessment"},
]

dependencies = [
    "claude-agent-sdk>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
proxy = [
    "litellm[proxy]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
